fix(wli-card-action-btns): adjust spacing between buttons

--- a/src/App.css
+++ b/src/App.css
@@ -510,6 +510,7 @@ body,html {
   width: 10%;
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   position: relative;
   right: 30px;
   gap: 40px
